src/test/ui/consts/const-eval/issue-44578.stderr
error[E0080]: evaluation of `<Bar<u16, u8> as Foo>::AMT` failed
  --> $DIR/issue-44578.rs:13:24
   |
LL |     const AMT: usize = [A::AMT][(A::AMT > B::AMT) as usize];
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ index out of bounds: the length is 1 but the index is 1

note: erroneous constant used
  --> $DIR/issue-44578.rs:25:20
   |
LL |     println!("{}", <Bar<u16, u8> as Foo>::AMT);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/issue-44578.rs:25:20
   |
LL |     println!("{}", <Bar<u16, u8> as Foo>::AMT);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/issue-44578.rs:25:20
   |
LL |     println!("{}", <Bar<u16, u8> as Foo>::AMT);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/issue-44578.rs:25:20
   |
LL |     println!("{}", <Bar<u16, u8> as Foo>::AMT);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
